--- a/birthday-card/style.css
+++ b/birthday-card/style.css
@@ -1,22 +1,36 @@
 body{
     font-family: 'Happy Monkey', cursive;
-    background-color: #daedff;
+    background-color: #cbe6ff;
     color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   
 }
 
 h1, h2, h3, h4, p{
-    text-shadow: 0px 0px 5px rgb(119, 151, 181);
+    text-shadow: 0px 0px 5px rgb(143, 183, 219);
 }
 
-h2, h3{
-    background-color: #ffaeaee3;
+#age{
+    background: #fcb1c2e3;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 23px 0 8px 0;
+}
+
+#date{
+    background: #fcb1c2e3;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 0;
 }
 
 #avatar{
     width: 270px;;
     border-radius: 50%;
-    border: 6px solid #ffaeaee3;
+    border: 6px solid #fcb1c2e3;
+}
+
+#header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
